[package]
name = "wthr"
version = "0.1.0"
authors = ["ShaneM123 <shanemoloneybusiness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
failure = "0.1.8"
exitfailure = "0.5.1"
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"
reqwest = { version = "0.10.6", features = ["json"] }
tokio = { version = "0.2.21", features = ["full"] }

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
tempfile = "3.1.0"

